{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "All",
            "id": "0b743467-d1fe-4221-9b89-039eeaf463bb",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "67e90970-f792-4505-9853-0f2fbb229af3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ccfe2312-f3e6-4655-90af-6fea7b7602cf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerWalking",
            "id": "d03916ab-8bca-4e1d-b0c5-2392b4dc05d2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6e76317b-f5cb-4b92-b0d8-d7e5a43d7393",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "21d33bf8-8f42-49d3-98e9-dbe260e7903b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "6a99ab8b-a478-4638-8b28-c9da480ce756",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlashlightToggle",
                    "type": "Button",
                    "id": "7f421106-607c-428c-8f19-2b18b3c4be6c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SmartphoneToggle",
                    "type": "Button",
                    "id": "2313d576-ef07-4496-8ef9-e49ebd06663b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GuidebookToggle",
                    "type": "Button",
                    "id": "6734d569-cc08-49fb-b98a-ca945a1927fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "0d8dd9dd-adae-4da3-b52f-92800050a51d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ba082886-6d28-467e-98e0-af133293cefa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7ddc2eb2-3a9c-46cb-95d0-5504606b1f0f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "84cca616-82aa-4599-aeea-ebc94dfa4ca0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "12db8ae4-3d1f-42fb-acf1-fbf4eea48a14",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47ee5e07-b34b-4595-9c22-4ced412dc79d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac1a60d1-b59b-4a99-b133-410f5fdc16c1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7222dc0c-713d-49e7-8321-1f4757b7fb32",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SmartphoneToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e01cbf8-0ce9-48e2-974c-bd596cc3a01e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GuidebookToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a7af71c-ebcf-48a7-8078-2323f421e377",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlashlightToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogue",
            "id": "5b6b2377-0126-480e-afa7-fa74d145346a",
            "actions": [
                {
                    "name": "NextSentence",
                    "type": "Button",
                    "id": "ba7cc3f3-3e01-40fd-82b7-2f0a58c1fdb8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43b3073e-5456-4d09-9618-2685de2551be",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextSentence",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Guidebook",
            "id": "6e66f7df-925c-47b0-8ee9-aa7195489756",
            "actions": [
                {
                    "name": "ChangePageLeft",
                    "type": "Button",
                    "id": "2527bb93-07d7-43a0-b779-f09cfb027ef2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangePageRight",
                    "type": "Button",
                    "id": "79b7697c-cde6-4223-9262-5e2eaae64b2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ad0e613-a2ba-4f24-b0d3-57670d49131e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePageLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e1448ba-3a43-4791-8b9e-ff7f5ade1f6b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePageRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Computer",
            "id": "e78e4f17-246c-4115-8ccc-6fb6703ab68a",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "c8a9728f-435c-4ac1-b75e-5285ba0933df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "a0fada47-ce97-467e-b38f-8a78811506d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1ca9be9-0766-44d9-b556-6aeaedd293d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "703e2517-2e27-4e8a-97e7-1b9ad2d8e24e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CommandPrompt",
            "id": "e92ca324-be7b-435a-b7b1-d850e85f4422",
            "actions": [
                {
                    "name": "CommandSubmit",
                    "type": "Button",
                    "id": "7b6be9f5-8fed-4963-bc53-368e7f01d91f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "6e0c295e-c056-484c-9564-d2a33f627eee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviousCommand",
                    "type": "Button",
                    "id": "562bef8e-2c14-47a2-8f30-dbb594cab995",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextCommand",
                    "type": "Button",
                    "id": "808f9513-ff3d-49cf-bb7f-f3af9733e04e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48996b9e-577b-4ea7-a7b4-9bd4be7abbb1",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandSubmit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86cc0bc6-f8b9-41d3-94cb-9e1473d47aa1",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandSubmit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda96ac9-603e-4c49-a5e5-c7fa56eff7a1",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf3e2e19-2564-462f-9981-9b1263a62b36",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fc54722-9bfc-474b-a4e0-72863b9f9900",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}